third_party/lw_abi/lw_c_api.h

/* Opaque handle to a peer-connection factory. */
typedef struct lw_factory lw_factory_t;
/* ---- Callback string payloads ----------------------------------------- */

/* Frees a payload delivered to a callback below. Every `char*` a callback
 * receives is owned by the callback, which passes it here once done. NULL is
 * ignored.
 *
 * Data channel messages come this way too. They are length-delimited, since a
 * binary message may contain zero bytes, but a NUL is appended past the length
 * so a text message can also be read as a C string. */
LW_C_API void lw_string_free(char* s);
/* ---- Video sink registry ---------------------------------------------- */

/* Opaque handle to a video track, produced by the control-plane shim. */
typedef struct lw_video_track lw_video_track_t;
/* Unguessable, nonzero handle to a registered video sink. 0 is invalid. */
typedef uint64_t lw_video_sink_token;
/* Per-decoded-frame callback (fires on the decoder delivery thread) reporting
 * the frame's pixel dimensions. For counting/telemetry only -- the frame
 * itself never crosses here (native frames flow through the sink registry).
 * Must return promptly and must not re-enter the track API (it runs on the
 * delivery path). Pass cb = NULL to clear. */
typedef void (*lw_frame_cb)(int width, int height, void* user);
/* ---- Peer connection / transceiver / receiver ------------------------- */

/* Opaque handles produced by the calls below. */
typedef struct lw_pc lw_pc_t;
typedef struct lw_transceiver lw_transceiver_t;
typedef struct lw_receiver lw_receiver_t;
/* Media kind for a transceiver. */
typedef enum lw_media_type {
  LW_MEDIA_AUDIO = 0,
  LW_MEDIA_VIDEO = 1,
  LW_MEDIA_DATA = 2,
} lw_media_type;
/* ---- Local video ------------------------------------------------------ */

/* Opaque handles for the send side. */
typedef struct lw_video_source lw_video_source_t;
typedef struct lw_sender lw_sender_t;
/* ---- Pipeline counters ------------------------------------------------ */

/* Per-track frame counters, cheap enough to read every frame: they are plain
 * counters, read without taking the lock the delivery path holds.
 *
 * These describe the local pipeline -- what the decoder produced and where it
 * went. They say nothing about the network; RTP, RTCP, ICE and DTLS statistics
 * are gathered asynchronously by the library and are a separate request.
 *
 * Rates are deliberately absent. Two samples and the elapsed time between them
 * give a rate over whatever window the caller wants, where a rate computed
 * here would impose one. */
typedef struct LwVideoTrackStats {
  uint32_t size; /* sizeof(LwVideoTrackStats) */
  uint32_t reserved;
  /* Every decoded frame the track delivered, whatever path it then took. */
  uint64_t frames_delivered;
  /* Delivered as a dmabuf to a bound sink, which the sink took. */
  uint64_t frames_native;
  /* Delivered through the software path: no native buffer, so the frame was
   * converted. Nonzero means the zero-copy path is not in use. */
  uint64_t frames_cpu;
  /* Native frames that reached no sink: none bound, the sink declined, or the
   * buffer was some other implementation's native type. */
  uint64_t frames_dropped;
  /* Geometry of the most recent frame, or 0 before the first. */
  uint32_t last_width;
  uint32_t last_height;
  /* CLOCK_MONOTONIC microseconds at the most recent frame, or 0 before the
   * first. Paired with frames_delivered across two calls, this gives a rate. */
  int64_t last_frame_us;
} LwVideoTrackStats;
/* ---- SDP negotiation -------------------------------------------------- */

/* Completion callbacks for the async SDP operations below. They are invoked on
 * the signaling thread. `user` is the opaque cookie passed to the originating
 * call.
 *
 * String payloads are owned by the callback and stay valid after it returns,
 * so a consumer that has to hand the payload to another thread before reading
 * it can do so; retire each with lw_string_free. Nothing is allocated for a
 * NULL callback. A payload may be NULL if it could not be allocated. */
typedef void (*lw_sdp_success_cb)(char* sdp, char* type, void* user);
typedef void (*lw_set_sdp_success_cb)(void* user);
typedef void (*lw_sdp_failure_cb)(char* error, void* user);
/* Statistics the library gathers from the transport: RTP, RTCP, ICE and DTLS.
 *
 * Delivered as a JSON array, one object per report, each carrying its own id,
 * type and timestamp along with its members -- the shape the library already
 * produces, rather than a C mirror of its sixteen member types.
 *
 * Asynchronous because that is how the library collects them. A synchronous
 * call would either block one of its threads or hand back something stale.
 *
 * Poll these at human rates, a second or so apart. The per-frame pipeline
 * counters above are the ones to read at frame rate; these allocate and
 * serialize on the signaling thread.
 *
 * The document is owned by the callback, as the SDP payloads are, and is
 * retired with lw_string_free. */
typedef void (*lw_stats_success_cb)(char* json, void* user);
/* ---- Data channel ----------------------------------------------------- */

typedef struct lw_data_channel lw_data_channel_t;
typedef enum lw_data_channel_state {
  LW_DATA_CHANNEL_CONNECTING = 0,
  LW_DATA_CHANNEL_OPEN = 1,
  LW_DATA_CHANNEL_CLOSING = 2,
  LW_DATA_CHANNEL_CLOSED = 3,
} lw_data_channel_state;
/* Channel configuration. Pass NULL to lw_pc_create_data_channel for the
 * defaults: ordered and reliable, which is what most callers want.
 *
 * max_retransmit_time_ms and max_retransmits are the two ways to make a
 * channel unreliable and are mutually exclusive; -1 leaves both unset. */
typedef struct LwDataChannelInit {
  uint32_t size;                  /* sizeof(LwDataChannelInit) */
  int32_t ordered;                /* nonzero: deliver in order (default) */
  int32_t max_retransmit_time_ms; /* -1 unset */
  int32_t max_retransmits;        /* -1 unset */
  int32_t negotiated;             /* nonzero: agreed out of band, use `id` */
  int32_t id;                     /* channel id when negotiated */
} LwDataChannelInit;
/* Opens a data channel. `label` must be non-NULL. Returns NULL on failure; the
 * handle owns one reference. */
LW_C_API lw_data_channel_t* lw_pc_create_data_channel(
    lw_pc_t* pc, const char* label, const LwDataChannelInit* init);
/* Channel events, invoked on the signaling thread. Any field may be NULL. The
 * struct is copied on registration; the function pointers and `user` must
 * remain valid until the observer is removed. */
typedef struct LwDataChannelObserver {
  uint32_t size; /* sizeof(LwDataChannelObserver) */
  void (*on_state)(int state, void* user);
  /* One message. `data` is owned by the callback (lw_string_free) and is
   * `size` bytes, with a NUL appended past them. */
  void (*on_message)(char* data, uint32_t size, int binary, void* user);
} LwDataChannelObserver;
/* ---- Peer-connection events (observer) -------------------------------- */

/* State values delivered to the observer callbacks below. These mirror the
 * library's own RTC*State enums, which the shim static-asserts against, so a
 * consumer needs only this header. */
typedef enum lw_signaling_state {
  LW_SIGNALING_STABLE = 0,
  LW_SIGNALING_HAVE_LOCAL_OFFER = 1,
  LW_SIGNALING_HAVE_REMOTE_OFFER = 2,
  LW_SIGNALING_HAVE_LOCAL_PRANSWER = 3,
  LW_SIGNALING_HAVE_REMOTE_PRANSWER = 4,
  LW_SIGNALING_CLOSED = 5,
} lw_signaling_state;
typedef enum lw_pc_state {
  LW_PC_STATE_NEW = 0,
  LW_PC_STATE_CONNECTING = 1,
  LW_PC_STATE_CONNECTED = 2,
  LW_PC_STATE_DISCONNECTED = 3,
  LW_PC_STATE_FAILED = 4,
  LW_PC_STATE_CLOSED = 5,
} lw_pc_state;
typedef enum lw_ice_gathering_state {
  LW_ICE_GATHERING_NEW = 0,
  LW_ICE_GATHERING_GATHERING = 1,
  LW_ICE_GATHERING_COMPLETE = 2,
} lw_ice_gathering_state;
typedef enum lw_ice_connection_state {
  LW_ICE_CONNECTION_NEW = 0,
  LW_ICE_CONNECTION_CHECKING = 1,
  LW_ICE_CONNECTION_COMPLETED = 2,
  LW_ICE_CONNECTION_CONNECTED = 3,
  LW_ICE_CONNECTION_FAILED = 4,
  LW_ICE_CONNECTION_DISCONNECTED = 5,
  LW_ICE_CONNECTION_CLOSED = 6,
} lw_ice_connection_state;
/* Per-event C callbacks, invoked on the signaling thread. Any field may be
 * NULL. State ints take the values of the enums above. The
 * struct is copied on registration, so it need not outlive the call; the
 * function pointers and `user` must remain valid until the observer is
 * removed. */
typedef struct LwPcObserver {
  uint32_t size; /* sizeof(LwPcObserver) */
  void (*on_signaling_state)(int state, void* user);
  void (*on_connection_state)(int state, void* user);
  void (*on_ice_gathering_state)(int state, void* user);
  void (*on_ice_connection_state)(int state, void* user);
  /* A local ICE candidate was gathered. The strings are owned by the callback
   * (lw_string_free), as for the SDP callbacks above. */
  void (*on_ice_candidate)(char* candidate, char* sdp_mid, int sdp_mline_index,
                           void* user);
  void (*on_renegotiation_needed)(void* user);
  /* A remote track arrived. `transceiver` is an OWNING handle: retire it with
   * lw_release; reach its receiver/video track via the transceiver
   * accessors. */
  void (*on_track)(lw_transceiver_t* transceiver, void* user);
  /* The far side opened a data channel. `channel` is an OWNING handle: retire
   * it with lw_release. Register an observer on it to receive messages. */
  void (*on_data_channel)(lw_data_channel_t* channel, void* user);
} LwPcObserver;