lib/src/ffi/lw_bindings.dart


/// Opaque handle to a peer-connection factory.
typedef lw_factory_t = lw_factory;

final class lw_video_track extends ffi.Opaque {}

/// Unguessable, nonzero handle to a registered video sink. 0 is invalid.
typedef lw_video_sink_token = ffi.Uint64;
typedef Dartlw_video_sink_token = int;

/// Opaque handle to a video track, produced by the control-plane shim.
typedef lw_video_track_t = lw_video_track;

/// Per-decoded-frame callback (fires on the decoder delivery thread) reporting
/// the frame's pixel dimensions. For counting/telemetry only -- the frame
/// itself never crosses here (native frames flow through the sink registry).
/// Must return promptly and must not re-enter the track API (it runs on the
/// delivery path). Pass cb = NULL to clear.
typedef lw_frame_cb = ffi.Pointer<ffi.NativeFunction<lw_frame_cbFunction>>;
typedef lw_frame_cbFunction = ffi.Void Function(
    ffi.Int width, ffi.Int height, ffi.Pointer<ffi.Void> user);
typedef Dartlw_frame_cbFunction = void Function(
    int width, int height, ffi.Pointer<ffi.Void> user);

final class lw_pc extends ffi.Opaque {}

final class lw_transceiver extends ffi.Opaque {}

final class lw_receiver extends ffi.Opaque {}

/// Media kind for a transceiver.
enum lw_media_type {
  LW_MEDIA_AUDIO(0),
  LW_MEDIA_VIDEO(1),
  LW_MEDIA_DATA(2);

  final int value;
  const lw_media_type(this.value);

  static lw_media_type fromValue(int value) => switch (value) {
        0 => LW_MEDIA_AUDIO,
        1 => LW_MEDIA_VIDEO,
        2 => LW_MEDIA_DATA,
        _ => throw ArgumentError("Unknown value for lw_media_type: $value"),
      };
}

/// Opaque handles produced by the calls below.
typedef lw_pc_t = lw_pc;
typedef lw_transceiver_t = lw_transceiver;
typedef lw_receiver_t = lw_receiver;

final class lw_video_source extends ffi.Opaque {}

final class lw_sender extends ffi.Opaque {}

/// Opaque handles for the send side.
typedef lw_video_source_t = lw_video_source;
typedef lw_sender_t = lw_sender;

/// Per-track frame counters, cheap enough to read every frame: they are plain
/// counters, read without taking the lock the delivery path holds.
///
/// These describe the local pipeline -- what the decoder produced and where it
/// went. They say nothing about the network; RTP, RTCP, ICE and DTLS statistics
/// are gathered asynchronously by the library and are a separate request.
///
/// Rates are deliberately absent. Two samples and the elapsed time between them
/// give a rate over whatever window the caller wants, where a rate computed
/// here would impose one.
final class LwVideoTrackStats extends ffi.Struct {
  /// sizeof(LwVideoTrackStats)
  @ffi.Uint32()
  external int size;

  @ffi.Uint32()
  external int reserved;

  /// Every decoded frame the track delivered, whatever path it then took.
  @ffi.Uint64()
  external int frames_delivered;

  /// Delivered as a dmabuf to a bound sink, which the sink took.
  @ffi.Uint64()
  external int frames_native;

  /// Delivered through the software path: no native buffer, so the frame was
  /// converted. Nonzero means the zero-copy path is not in use.
  @ffi.Uint64()
  external int frames_cpu;

  /// Native frames that reached no sink: none bound, the sink declined, or the
  /// buffer was some other implementation's native type.
  @ffi.Uint64()
  external int frames_dropped;

  /// Geometry of the most recent frame, or 0 before the first.
  @ffi.Uint32()
  external int last_width;

  @ffi.Uint32()
  external int last_height;

  /// CLOCK_MONOTONIC microseconds at the most recent frame, or 0 before the
  /// first. Paired with frames_delivered across two calls, this gives a rate.
  @ffi.Int64()
  external int last_frame_us;
}

/// Completion callbacks for the async SDP operations below. They are invoked on
/// the signaling thread. `user` is the opaque cookie passed to the originating
/// call.
///
/// String payloads are owned by the callback and stay valid after it returns,
/// so a consumer that has to hand the payload to another thread before reading
/// it can do so; retire each with lw_string_free. Nothing is allocated for a
/// NULL callback. A payload may be NULL if it could not be allocated.
typedef lw_sdp_success_cb
    = ffi.Pointer<ffi.NativeFunction<lw_sdp_success_cbFunction>>;
typedef lw_sdp_success_cbFunction = ffi.Void Function(ffi.Pointer<ffi.Char> sdp,
    ffi.Pointer<ffi.Char> type, ffi.Pointer<ffi.Void> user);
typedef Dartlw_sdp_success_cbFunction = void Function(ffi.Pointer<ffi.Char> sdp,
    ffi.Pointer<ffi.Char> type, ffi.Pointer<ffi.Void> user);
typedef lw_sdp_failure_cb
    = ffi.Pointer<ffi.NativeFunction<lw_sdp_failure_cbFunction>>;
typedef lw_sdp_failure_cbFunction = ffi.Void Function(
    ffi.Pointer<ffi.Char> error, ffi.Pointer<ffi.Void> user);
typedef Dartlw_sdp_failure_cbFunction = void Function(
    ffi.Pointer<ffi.Char> error, ffi.Pointer<ffi.Void> user);
typedef lw_set_sdp_success_cb
    = ffi.Pointer<ffi.NativeFunction<lw_set_sdp_success_cbFunction>>;
typedef lw_set_sdp_success_cbFunction = ffi.Void Function(
    ffi.Pointer<ffi.Void> user);
typedef Dartlw_set_sdp_success_cbFunction = void Function(
    ffi.Pointer<ffi.Void> user);

/// Statistics the library gathers from the transport: RTP, RTCP, ICE and DTLS.
///
/// Delivered as a JSON array, one object per report, each carrying its own id,
/// type and timestamp along with its members -- the shape the library already
/// produces, rather than a C mirror of its sixteen member types.
///
/// Asynchronous because that is how the library collects them. A synchronous
/// call would either block one of its threads or hand back something stale.
///
/// Poll these at human rates, a second or so apart. The per-frame pipeline
/// counters above are the ones to read at frame rate; these allocate and
/// serialize on the signaling thread.
///
/// The document is owned by the callback, as the SDP payloads are, and is
/// retired with lw_string_free.
typedef lw_stats_success_cb
    = ffi.Pointer<ffi.NativeFunction<lw_stats_success_cbFunction>>;
typedef lw_stats_success_cbFunction = ffi.Void Function(
    ffi.Pointer<ffi.Char> json, ffi.Pointer<ffi.Void> user);
typedef Dartlw_stats_success_cbFunction = void Function(
    ffi.Pointer<ffi.Char> json, ffi.Pointer<ffi.Void> user);

final class lw_data_channel extends ffi.Opaque {}

enum lw_data_channel_state {
  LW_DATA_CHANNEL_CONNECTING(0),
  LW_DATA_CHANNEL_OPEN(1),
  LW_DATA_CHANNEL_CLOSING(2),
  LW_DATA_CHANNEL_CLOSED(3);

  final int value;
  const lw_data_channel_state(this.value);

  static lw_data_channel_state fromValue(int value) => switch (value) {
        0 => LW_DATA_CHANNEL_CONNECTING,
        1 => LW_DATA_CHANNEL_OPEN,
        2 => LW_DATA_CHANNEL_CLOSING,
        3 => LW_DATA_CHANNEL_CLOSED,
        _ => throw ArgumentError(
            "Unknown value for lw_data_channel_state: $value"),
      };
}

/// Channel configuration. Pass NULL to lw_pc_create_data_channel for the
/// defaults: ordered and reliable, which is what most callers want.
///
/// max_retransmit_time_ms and max_retransmits are the two ways to make a
/// channel unreliable and are mutually exclusive; -1 leaves both unset.
final class LwDataChannelInit extends ffi.Struct {
  /// sizeof(LwDataChannelInit)
  @ffi.Uint32()
  external int size;

  /// nonzero: deliver in order (default)
  @ffi.Int32()
  external int ordered;

  /// -1 unset
  @ffi.Int32()
  external int max_retransmit_time_ms;

  /// -1 unset
  @ffi.Int32()
  external int max_retransmits;

  /// nonzero: agreed out of band, use `id`
  @ffi.Int32()
  external int negotiated;

  /// channel id when negotiated
  @ffi.Int32()
  external int id;
}

/// ---- Data channel -----------------------------------------------------
typedef lw_data_channel_t = lw_data_channel;

/// Channel events, invoked on the signaling thread. Any field may be NULL. The
/// struct is copied on registration; the function pointers and `user` must
/// remain valid until the observer is removed.
final class LwDataChannelObserver extends ffi.Struct {
  /// sizeof(LwDataChannelObserver)
  @ffi.Uint32()
  external int size;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Int state, ffi.Pointer<ffi.Void> user)>>
      on_state;

  /// One message. `data` is owned by the callback (lw_string_free) and is
  /// `size` bytes, with a NUL appended past them.
  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char> data, ffi.Uint32 size,
              ffi.Int binary, ffi.Pointer<ffi.Void> user)>> on_message;
}

/// State values delivered to the observer callbacks below. These mirror the
/// library's own RTC*State enums, which the shim static-asserts against, so a
/// consumer needs only this header.
enum lw_signaling_state {
  LW_SIGNALING_STABLE(0),
  LW_SIGNALING_HAVE_LOCAL_OFFER(1),
  LW_SIGNALING_HAVE_REMOTE_OFFER(2),
  LW_SIGNALING_HAVE_LOCAL_PRANSWER(3),
  LW_SIGNALING_HAVE_REMOTE_PRANSWER(4),
  LW_SIGNALING_CLOSED(5);

  final int value;
  const lw_signaling_state(this.value);

  static lw_signaling_state fromValue(int value) => switch (value) {
        0 => LW_SIGNALING_STABLE,
        1 => LW_SIGNALING_HAVE_LOCAL_OFFER,
        2 => LW_SIGNALING_HAVE_REMOTE_OFFER,
        3 => LW_SIGNALING_HAVE_LOCAL_PRANSWER,
        4 => LW_SIGNALING_HAVE_REMOTE_PRANSWER,
        5 => LW_SIGNALING_CLOSED,
        _ =>
          throw ArgumentError("Unknown value for lw_signaling_state: $value"),
      };
}

enum lw_pc_state {
  LW_PC_STATE_NEW(0),
  LW_PC_STATE_CONNECTING(1),
  LW_PC_STATE_CONNECTED(2),
  LW_PC_STATE_DISCONNECTED(3),
  LW_PC_STATE_FAILED(4),
  LW_PC_STATE_CLOSED(5);

  final int value;
  const lw_pc_state(this.value);

  static lw_pc_state fromValue(int value) => switch (value) {
        0 => LW_PC_STATE_NEW,
        1 => LW_PC_STATE_CONNECTING,
        2 => LW_PC_STATE_CONNECTED,
        3 => LW_PC_STATE_DISCONNECTED,
        4 => LW_PC_STATE_FAILED,
        5 => LW_PC_STATE_CLOSED,
        _ => throw ArgumentError("Unknown value for lw_pc_state: $value"),
      };
}

enum lw_ice_gathering_state {
  LW_ICE_GATHERING_NEW(0),
  LW_ICE_GATHERING_GATHERING(1),
  LW_ICE_GATHERING_COMPLETE(2);

  final int value;
  const lw_ice_gathering_state(this.value);

  static lw_ice_gathering_state fromValue(int value) => switch (value) {
        0 => LW_ICE_GATHERING_NEW,
        1 => LW_ICE_GATHERING_GATHERING,
        2 => LW_ICE_GATHERING_COMPLETE,
        _ => throw ArgumentError(
            "Unknown value for lw_ice_gathering_state: $value"),
      };
}

enum lw_ice_connection_state {
  LW_ICE_CONNECTION_NEW(0),
  LW_ICE_CONNECTION_CHECKING(1),
  LW_ICE_CONNECTION_COMPLETED(2),
  LW_ICE_CONNECTION_CONNECTED(3),
  LW_ICE_CONNECTION_FAILED(4),
  LW_ICE_CONNECTION_DISCONNECTED(5),
  LW_ICE_CONNECTION_CLOSED(6);

  final int value;
  const lw_ice_connection_state(this.value);

  static lw_ice_connection_state fromValue(int value) => switch (value) {
        0 => LW_ICE_CONNECTION_NEW,
        1 => LW_ICE_CONNECTION_CHECKING,
        2 => LW_ICE_CONNECTION_COMPLETED,
        3 => LW_ICE_CONNECTION_CONNECTED,
        4 => LW_ICE_CONNECTION_FAILED,
        5 => LW_ICE_CONNECTION_DISCONNECTED,
        6 => LW_ICE_CONNECTION_CLOSED,
        _ => throw ArgumentError(
            "Unknown value for lw_ice_connection_state: $value"),
      };
}

/// Per-event C callbacks, invoked on the signaling thread. Any field may be
/// NULL. State ints take the values of the enums above. The
/// struct is copied on registration, so it need not outlive the call; the
/// function pointers and `user` must remain valid until the observer is
/// removed.
final class LwPcObserver extends ffi.Struct {
  /// sizeof(LwPcObserver)
  @ffi.Uint32()
  external int size;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Int state, ffi.Pointer<ffi.Void> user)>>
      on_signaling_state;
